--- a/gm/basics/index.html
+++ b/gm/basics/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>The GM | 地城世界 HTML SRD</title>
+  <title>擔任GM | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -111,51 +111,76 @@
           <div class="col-md-8 col-md-offset-1">
              
 
-<h1>The GM</h1>
-<p class="NoIndent">There are many different fantasy genres, each with their own style or advice for GMing. Dungeon World is designed for one of those styles in particular—a world of elves, orcs, dragons and magic where dark dangers mix with lighthearted adventure. The rules in this chapter will help you run a game in that style.</p>
-<p>The characters have rules to follow when they roll dice and take actions. The GM has rules to follow, too. You’ll be refereeing, adjudicating, and describing the world as you go—Dungeon World provides a framework to guide you in doing so.</p>
-<p>This chapter isn’t about advice for the GM or optional tips and tricks on how best to play Dungeon World. It’s a chapter with procedures and rules for whoever takes on the role of GM.</p>
-<h3>GMing Dungeon World: A Framework</h3>
-<p class="NoIndent">Running a game of Dungeon World is built on these: the GM’s <strong>agenda</strong>, <strong>principles</strong>, and <strong>moves</strong>. The agenda is what you set out to do when you sit down at the table. The principles are the guides that keep you focused on that agenda. The GM’s moves are the concrete, moment-to-moment things you do to move the game forward. You’ll make moves when players miss their rolls, when the rules call for it, and whenever the players look to you to see what happens. Your moves keep the fiction consistent and the game’s action moving forward.</p>
-<p>The GM’s agenda, principles, and moves are rules just like damage or stats or HP. You should take the same care in altering them or ignoring them that you would with any other rule.</p>
-<h2>How to GM</h2>
-<p class="NoIndent">When you sit down at the table as a GM you do these things:</p>
-<ul><li>Describe the situation</li>
-<li>Follow the rules</li>
-<li>Make moves</li>
-<li>Exploit your prep</li></ul>
-<p class="NoIndent">The players have it easy—they just say what their characters say, think, and do. You have it a bit harder. You have to say everything else. What does that entail?</p>
-<p>First and foremost, you <strong>describe the immediate situation around the players at all times</strong>. This is how you start a session, how you get things rolling after a snack break, get back on track after a great joke: tell them what the situation is in concrete terms.</p>
-<p>Use detail and senses to draw them in. The situation isn’t just an orc charging you, it’s an orc painted in blood swinging a hammer and yelling bloody murder. You can leverage a lack of information, too. The sound of clattering armor and shuffling feet, for instance.</p>
-<p>The situation around them is rarely “everything’s great, nothing to worry about.” They’re adventurers going on adventures—give them something to react to.</p>
-<p>When you describe the situation, always end with “What do you do?” Dungeon World is about action and adventure! Portray a situation that demands a response.</p>
-<p>From the get-go make sure to <strong>follow the rules</strong>. This means your GM rules, sure, but also keep an eye on the players’ moves. It’s everyone’s responsibility to watch for when a move has been triggered, including you. Stop the players and ask if they mean to trigger the rules when it sounds like that’s what they’re doing.</p>
-<p>Part of following the rules is <strong>making moves</strong>. Your moves are different than player moves and we’ll describe them in detail in a bit. Your moves are specific things you can do to change the flow of the game.</p>
-<p>In all of these things, <strong>exploit your prep</strong>. At times you’ll know something the players don’t yet know. You can use that knowledge to help you make moves. Maybe the wizard tries to cast a spell and draws unwanted attention. They don’t know that the attention that just fell on them was the ominous gaze of a demon waiting two levels below, but you do. </p>
-<h2>Agenda</h2>
+<h1>擔任GM</h1>
+<p class="NoIndent">
+	奇幻風格有許多種不同的類別，每一種類別對於如何主持遊戲也會有不同的風格和建議。地城世界是專門為其中一種風格而設計的──一個存在著精靈、獸人、龍、和魔法的世界，在這裡，黑暗深沉的危險與輕鬆愉快的冒險彼此交織。本章節中的規則將協助你以這種風格來主持遊戲。</p>
+<p>
+	角色們在擲骰和採取行動時需要遵守規則。而做為GM，你也有必須遵守的規則。在遊戲過程中，你將會需要裁決、宣判、並描述這個世界的變化──地城世界為此提供了一個框架來指導你該如何主持遊戲。</p>
+<p>
+	本章節的內容並不是提供給GM的建議、也不是關於那些讓你更好遊玩地城世界遊戲的選用技巧和訣竅，而是為任何打算擔當GM位置的人提供應該遵守的程序和規則。</p>
+
+<h4>主持地城世界：框架</h4>
+<p class="NoIndent">
+	地城世界這個遊戲的運行基礎主要建立於下列幾個要素；GM的<strong>目標事項</strong>、<strong>原則</strong>、和<strong>動作</strong>。目標事項代表著你在遊戲中預計要做到的事情。原則提供一些指引，讓你能專注於完成你的目標事項。GM動作則是那些你在每時每刻用來推動遊戲進行的實際手段。每當玩家擲骰失敗時、規則要求你這麼做時、或是玩家們看著你，等待你描述接下來發生的情況時，就是你使用這些動作的時機。你的動作將維持敘事的連貫性，並推進遊戲的發展。</p>
+<p>
+	GM的目標事項、原則、和動作，就跟傷害、屬性或HP一樣，同樣屬於規則的一部份。也因此，若你打算修改它們的運作方式或忽略它們，你必須像對待其他規則一樣小心地處理它們。</p>
+
+<hr/>
+<h2>如何擔任GM</h2>
+<p class="NoIndent">
+	當你以GM的身分在桌邊坐下時，你需要做這些事情：</p>
+<ul>
+	<li>描述故事情境</li>
+	<li>遵守規則</li>
+	<li>使用動作</li>
+	<li>善用你的事前準備</li></ul>
+<p class="NoIndent">
+	玩家們要做的事比較簡單──他們只需要說出他們角色會說的話、所想的事、以及會採取的行動。你的任務稍微困難一點，你必須說出除此之外的所有一切。這代表什麼意思呢？</p>
+<p>
+	首先，也是最重要的，你需要<strong>隨時描述玩家們周遭環境的即時狀況</strong>。這同時是你讓聚會開始的方法，也是當你打算在短暫的休息後、或開了個有趣的玩笑之後讓故事回到正軌時所需要做的事情：用清晰具體的詞彙告訴玩家他們身處於什麼樣的情境中。</p>
+<p>
+	利用細節和感官描述來讓玩家身歷其境。情境並不僅僅是「一頭獸人朝你衝鋒」，而是「一頭渾身浴血的獸人揮舞重槌，怒吼著朝你衝鋒而來」。你也可以反過來利用零碎的訊息來營造氣氛，比如說僅僅給出金屬鎧甲碰撞的噪音、或事拖著腳走路發出的足音。</p>
+<p>
+	玩家身邊的情境鮮少會是「一切都很好，什麼都不用擔心」。他們是正在經歷冒險的冒險者──給他們一些東西去應付！</p>
+<p>
+	當你描述情境時，永遠記得以「你打算做什麼？」結尾。地城世界是個充滿動作場景與冒險的遊戲，描繪出一個要求玩家們立即做出反應的情境吧！</p>
+<p>
+	確保你從一開始就<strong>遵守規則</strong>。這裡指的是你的GM動作，當然，但也記得時時注意玩家們的動作是否符合規則進行。每個人都有責任去注意某個動作是否有被觸發，這也包括你在內。當某個玩家的行動看起來像是準備觸發一條規則的時候，請他暫停描述，並詢問確認他們是否打算要這麼做。</p>
+<p>
+	<strong>進行動作</strong>是你需要遵守的其中一部分規則。你的GM動作與玩家截然不同，我們稍後會再仔細地介紹這些動作。你的動作會明確定義你能做的事情，並藉此改變遊戲的流向。</p>
+<p>
+	在上述這些環節中，同時也要記得<strong>善用你的事前準備</strong>。有時候你會知道一些玩家們還不知道的情報，你可以利用這些情報來協助你進行動作。當法師在施法的同時引來了不必要的注意，玩家們還不會知道他們引來的注意是什麼，但你很清楚，就在兩層樓之下，那可怖惡魔的不祥視線已經落在他們身上。</p>
+
+<hr/>
+<h2>目標事項 (Agenda)</h2>
 <p class="NoIndent">Your agenda makes up the things you aim to do at all times while GMing a game of Dungeon World:</p>
-<ul><li>Portray a fantastic world</li>
-<li>Fill the characters’ lives with adventure</li>
-<li>Play to find out what happens</li></ul>
+<ul>
+	<li>Portray a fantastic world</li>
+	<li>Fill the characters’ lives with adventure</li>
+	<li>Play to find out what happens</li></ul>
+
 <p class="NoIndent">Everything you say and do at the table (and away from the table, too) exists to accomplish these three goals and no others. Things that aren’t on this list aren’t your goals. You’re not trying to beat the players or test their ability to solve complex traps. You’re not here to give the players a chance to explore your finely crafted setting. You’re not trying to kill the players (though monsters might be). You’re most certainly not here to tell everyone a planned-out story.</p>
 <p>Your first agenda is to <strong>portray a fantastic world</strong>. Dungeon World is all about guts, guile, and bravery against darkness and doom. It’s about characters who have decided to take up a life of adventure in the hopes of some glorious reward. It’s your job to participate in that by showing the players a world in which their characters can find that adventure. Without the player characters the world would fall into chaos or destruction—it might still even with them. It’s up to you to portray the fantastic elements of that world. Show the players the wonders of the world they’re in and encourage them to react to it.</p>
 <p><strong>Filling the characters’ lives with adventure</strong> means working with the players to create a world that’s engaging and dynamic. Adventurers are always caught up in some world-threatening danger or another—encourage and foster that kind of action in the game.</p>
 <p>Dungeon World adventures <strong>never</strong> presume player actions. A Dungeon World adventure portrays a setting in motion—someplace significant with creatures big and small pursuing their own goals. As the players come into conflict with that setting and its denizens, action is inevitable. You’ll honestly portray the repercussions of that action.</p>
 <p>This is how you <strong>play to find out what happens</strong>. You’re sharing in the fun of finding out how the characters react to and change the world you’re portraying. You’re all participants in a great adventure that’s unfolding. So really, don’t plan too hard. The rules of the game will fight you. It’s fun to see how things unfold, trust us.</p>
 <p></p>
-<h2>Principles</h2>
-<ul><li>Draw maps, leave blanks</li>
-<li>Address the characters, not the players</li>
-<li>Embrace the fantastic</li>
-<li>Make a move that follows</li>
-<li>Never speak the name of your move</li>
-<li>Give every monster life</li>
-<li>Name every person</li>
-<li>Ask questions and use the answers</li>
-<li>Be a fan of the characters</li>
-<li>Think dangerous</li>
-<li>Begin and end with the fiction</li>
-<li>Think offscreen, too</li></ul>
+
+<hr/>
+<h2>原則 (Principles)</h2>
+<ul>
+	<li>Draw maps, leave blanks</li>
+	<li>Address the characters, not the players</li>
+	<li>Embrace the fantastic</li>
+	<li>Make a move that follows</li>
+	<li>Never speak the name of your move</li>
+	<li>Give every monster life</li>
+	<li>Name every person</li>
+	<li>Ask questions and use the answers</li>
+	<li>Be a fan of the characters</li>
+	<li>Think dangerous</li>
+	<li>Begin and end with the fiction</li>
+	<li>Think offscreen, too</li></ul>
 <p class="NoIndent">Your principles are your guides. Often, when it’s time to make a move, you’ll already have an idea of what makes sense. Consider it in light of your principles and go with it, if it fits.</p>
 <h4>Draw maps, leave blanks</h4>
 <p class="NoIndent">Dungeon World exists mostly in the imaginations of the people playing it; maps help everyone stay on the same page. You won’t always be drawing them yourself, but any time there’s a new location described make sure it gets added to a map.</p>
@@ -184,7 +209,9 @@
 <p class="NoIndent">Everything you and the players do in Dungeon World comes from and leads to fictional events. When the players make a move, they take a fictional action to trigger it, apply the rules, and get a fictional effect. When you make a move it always comes from the fiction.</p>
 <h4>Think offscreen too</h4>
 <p class="NoIndent">Just because you’re a fan of the characters doesn’t mean everything happens right in front of them. Sometimes your best move is in the next room, or another part of the dungeon, or even back in town. Make your move elsewhere and show its effects when they come into the spotlight.</p>
-<h2>Moves</h2>
+
+<hr/>
+<h2>動作 (Moves)</h2>
 <p class="NoIndent">Whenever everyone looks to you to see what happens choose one of these. Each move is something that occurs in the fiction of the game—they aren’t code words or special terms. “Use up their resources” literally means to expend the resources of the characters, for example.</p>
 <ul><li>Use a monster, danger, or location move</li>
 <li>Reveal an unwelcome truth</li>
@@ -247,7 +274,9 @@
 <p class="NoIndent">A spot is someplace where a character needs to make tough choices. Put them, or something they care about, in the path of destruction. The harder the choice, the tougher the spot.</p>
 <h4>Tell them the requirements or consequences and ask</h4>
 <p class="NoIndent">This move is particularly good when they want something that’s not covered by a move, or they’ve failed a move. They can do it, sure, but they’ll have to pay the price. Or, they can do it, but there will be consequences. Maybe they can swim through the shark-infested moat before being devoured, but they’ll need a distraction. Of course, this is made clear to the characters, not just the players: the sharks are in a starved frenzy, for example.</p>
-<h2>Dungeon Moves</h2>
+
+<hr/>
+<h2>地城動作 (Dungeon Moves)</h2>
 <p class="NoIndent">Dungeon Moves are a special subset that are used to make or alter a dungeon on the fly. Use these if your players are exploring a hostile area that you don’t already have planned completely.</p>
 <p>Map out the area being explored as you make these moves. Most of them will require you to add a new room or element to your map.</p>
 <ul><li>Change the environment</li>
@@ -282,16 +311,21 @@
 <p class="NoIndent">Challenge a character by looking at what they’re good at. Give the thief a lock to pick, show the cleric servants of an enemy god to battle against. Give the wizard magical mysteries to investigate. Show the fighter some skulls to crack. Give someone a chance to shine.</p>
 <p>As an alternative, challenge a character by looking at what they’re bad at or what they’ve left unresolved. If the bard has a complicated lie on his conscience, what steps will he take to cover it up when someone figures him out? If the wizard has been summoning demons, what happens when word gets out?</p>
 <p>This move can give a character the spotlight—even if just for a moment. Try to give everyone a chance to be the focus of play using this move from session to session.</p>
-<h2>Dealing With Common Situations</h2>
-<p class="NoIndent">There are some common situations that come up in Dungeon World. Here’s how to deal with them.</p>
-<h4>Fights</h4>
+
+<hr/>
+<h2>常見情況的處理</h2>
+<p class="NoIndent">在地城世界中總會出現一些常見的情況。這裡將說明這些情況的處理方法。</p>
+
+<h4>戰鬥</h4>
 <p class="NoIndent">Sooner or later blades are drawn and blood is shed. When this happens the players are likely to start hacking and slashing, volleying, and defending. Think about more than just the exchange of damage. Monsters might be trying to capture the characters or protect something from them. Understand what the fight is about; what each side wants and how that might affect the tide of battle.</p>
 <p>No self-respecting monster just stands still for their beating. Combat is a dynamic thing with creatures moving in and out of range, taking cover, and retreating. Sometimes the battlefield itself shifts. Have your monsters take action that the players will react to. Make sure you’re making use of moves beyond deal damage, even in a fight.</p>
 <p>Make sure everyone has a chance to act, and that you know where each player is during the chaos of combat. Make a map of a complex battle location so that everyone knows just what’s happening and can describe their actions appropriately.</p>
-<h4>Traps</h4>
+
+<h4>陷阱</h4>
 <p class="NoIndent">Traps may come from your prep, or you can improvise them based on your moves. If nothing has established that the location is safe, traps are always an option.</p>
 <p>The players may find traps through clever plans, trap sense, or discerning realities. If a character describes an action that doesn’t trigger a move, but the action would still discover a trap, don’t hide it from them. Traps aren’t allowed to break the rules.</p>
-<h4>People</h4>
+
+<h4>人際</h4>
 <p class="NoIndent">Dwarven smiths, elven sages, humans of all shapes and sizes occupy the world around the characters. They’re not mindless stooges to be pushed around but they’re not what we’re playing to find out about either. The NPCs are people: they have goals and the tools to struggle towards those goals. Use them to illustrate what the world is like. Show your players the common people struggling for recognition or the noble classes seeking to uplift their people. Some whole adventures might take place in a peopled environment rather than an isolated dungeon. Some classes, the bard in particular, are adept at manipulating and using people as resources. Don’t shy away from these situations. Be a fan of these characters, giving them interesting, nuanced people to interact with.</p>  
 <p>People, just like dungeons, change over time. The passing of the characters through their lives might inspire or enrage them. The characters’ actions will cause the world to change, for good or ill, and the people they meet with will remember these changes. When the characters roll back through a town they were less-than-kind to on their previous visit, show them how the people are different now. Are they more cautious? Have they taken up a new religion? Are they hungry for revenge?</p>
 <p>Relationships between characters are represented by the bonds but relationships with NPCs are more tenuous. If the players want to make real, lasting connections with the people of the world, they need to act. Remember, “what do you do?” is as valid a question when faced with the hopes and fears of a potential new ally or enemy as it is when staring down the business end of a longsword.</p>
