--- a/playing_the_game/index.html
+++ b/playing_the_game/index.html
@@ -129,7 +129,7 @@
 
 
 <h2>進行動作</h2>
-<p class="NoIndent">在地城世界的規則中，最基本單位就是「動作」。一個動作看起來會像這樣：</p>
+<p class="NoIndent">在地城世界的規則中，最基本單位就是「動作（Move）」。一個動作看起來會像這樣：</p>
 <div class="Move">
 <p class="NoIndent">
 	當你<strong>以近戰肉搏攻擊敵人</strong>時，擲+力量。<br/>
