--- a/classes/fighter/index.html
+++ b/classes/fighter/index.html
@@ -259,7 +259,7 @@
 <p class="NoIndent">
 	為你的招牌武器額外選擇一項強化效果。</p></div>
 
-<div class="Move"><h3 class="MoveName">酣戰眼紅 (Seeing Red)</h3>
+<div class="Move"><h3 class="MoveName">紅眼酣戰 (Seeing Red)</h3>
 <p class="NoIndent">
 	當你在戰鬥期間進行審視現狀動作時，你獲得 +1 加值。</p></div>
 
@@ -295,7 +295,7 @@
 	當你<strong>決定利用你的護甲代為承受對你造成的衝擊傷害</strong>時，該傷害將被抵銷，且你獲得對該攻擊者的下次+1。但你必須同時將你盔甲或盾牌（由你決定）的護甲值減少1點。其護甲值將在你每次做出這個決定時減少。若這個減損值導致該物品的護甲值歸零，則該物品被摧毀。</p></div>
 
 <div class="Move"><h3 class="MoveName">邪眼 (Evil Eye)</h3>
-<p class="Requirement">需求: 酣戰眼紅</p>
+<p class="Requirement">需求: 紅眼酣戰</p>
 <p class="NoIndent">
 	當你<strong>投身戰鬥</strong>時，擲+魅力。<br/>
 	✴擲出10+時，獲得 2掌握。<br/>
