--- a/gm/basics/index.html
+++ b/gm/basics/index.html
@@ -153,61 +153,85 @@
 
 <hr/>
 <h2>目標事項 (Agenda)</h2>
-<p class="NoIndent">Your agenda makes up the things you aim to do at all times while GMing a game of Dungeon World:</p>
+<p class="NoIndent">
+	你的目標事項記載了你在主持地城世界的期間，始終要去達成的事項：</p>
 <ul>
-	<li>Portray a fantastic world</li>
-	<li>Fill the characters’ lives with adventure</li>
-	<li>Play to find out what happens</li></ul>
+	<li>描繪出一個奇幻世界</li>
+	<li>讓角色們的生命充滿冒險</li>
+	<li>用玩的來看看會發生什麼事</li></ul>
 
-<p class="NoIndent">Everything you say and do at the table (and away from the table, too) exists to accomplish these three goals and no others. Things that aren’t on this list aren’t your goals. You’re not trying to beat the players or test their ability to solve complex traps. You’re not here to give the players a chance to explore your finely crafted setting. You’re not trying to kill the players (though monsters might be). You’re most certainly not here to tell everyone a planned-out story.</p>
-<p>Your first agenda is to <strong>portray a fantastic world</strong>. Dungeon World is all about guts, guile, and bravery against darkness and doom. It’s about characters who have decided to take up a life of adventure in the hopes of some glorious reward. It’s your job to participate in that by showing the players a world in which their characters can find that adventure. Without the player characters the world would fall into chaos or destruction—it might still even with them. It’s up to you to portray the fantastic elements of that world. Show the players the wonders of the world they’re in and encourage them to react to it.</p>
-<p><strong>Filling the characters’ lives with adventure</strong> means working with the players to create a world that’s engaging and dynamic. Adventurers are always caught up in some world-threatening danger or another—encourage and foster that kind of action in the game.</p>
-<p>Dungeon World adventures <strong>never</strong> presume player actions. A Dungeon World adventure portrays a setting in motion—someplace significant with creatures big and small pursuing their own goals. As the players come into conflict with that setting and its denizens, action is inevitable. You’ll honestly portray the repercussions of that action.</p>
-<p>This is how you <strong>play to find out what happens</strong>. You’re sharing in the fun of finding out how the characters react to and change the world you’re portraying. You’re all participants in a great adventure that’s unfolding. So really, don’t plan too hard. The rules of the game will fight you. It’s fun to see how things unfold, trust us.</p>
+<p class="NoIndent">
+	任何你在遊戲桌上（以及遊戲桌外）所說所做的一切，都是為了完成這三個目標而存在的。這三者以外的都不是你的目標：你不是為了打敗玩家或考驗他們解決複雜陷阱的能力而來；你在這裡不是為了讓玩家們有機會探索你精心打造的世界觀設定；也不是為了殺死玩家（儘管故事中的怪物們可能會這麼打算）。你更不是為了跟大家講述一個已經被計畫好的故事，才來擔任這個遊戲的GM的。</p>
+<p>
+	你的第一個目標事項是<strong>描繪出一個奇幻世界</strong>。地城世界是個充滿了膽識、智謀、以及對抗黑暗和災厄的勇氣的遊戲，講述著那些決定投身冒險生活，冀望於其中贏得光輝榮耀的角色們。你的職責是參與其中，將一個能提供角色冒險的世界展現在玩家面前。若沒有了玩家角色，這個世界將會陷入混亂或毀滅──雖然就算他們在場也可能如此。由你決定該如何描繪這個世界的奇幻要素，向玩家們展現這個世界的驚奇與美好，並鼓勵他們做出反應。</p>
+<p>
+	<strong>讓角色們的生命充滿冒險</strong>意味著與玩家們共同打造出一個迷人且充滿變化的世界。冒險者總是會被捲入某種危害整個世界的威脅之中──在遊戲中盡量鼓勵並培養這類行為。</p>
+<p>
+	地城世界的冒險<strong>永遠不會</strong>預設玩家的行動。地城世界的冒險會透過動態的方式描繪其背景設定──在某個重要的場所，大大小小的生物都各自追求著自己的目標，而當玩家們到來，並與環境和當地居民發生衝突時，他們將不可避免地採取各種行動。你要做的，就是誠實地描繪出這些行動所帶來的後果﹒</p>
+<p>
+	這正是你<strong>用玩的來看看會發生什麼事</strong>的方法。你與玩家們將共同分享發掘角色如何反應、以及改變你們所描繪世界的樂趣。你們全都參與著這場正逐漸揭開面紗的冒險故事。所以說真的，不要計畫太多，否則遊戲規則將與你作對。相信我們，在遊玩過程中看著事情如何發展，絕對別有一番風味。</p>
 <p></p>
 
 <hr/>
 <h2>原則 (Principles)</h2>
 <ul>
-	<li>Draw maps, leave blanks</li>
-	<li>Address the characters, not the players</li>
-	<li>Embrace the fantastic</li>
-	<li>Make a move that follows</li>
-	<li>Never speak the name of your move</li>
-	<li>Give every monster life</li>
-	<li>Name every person</li>
-	<li>Ask questions and use the answers</li>
-	<li>Be a fan of the characters</li>
-	<li>Think dangerous</li>
-	<li>Begin and end with the fiction</li>
-	<li>Think offscreen, too</li></ul>
-<p class="NoIndent">Your principles are your guides. Often, when it’s time to make a move, you’ll already have an idea of what makes sense. Consider it in light of your principles and go with it, if it fits.</p>
-<h4>Draw maps, leave blanks</h4>
-<p class="NoIndent">Dungeon World exists mostly in the imaginations of the people playing it; maps help everyone stay on the same page. You won’t always be drawing them yourself, but any time there’s a new location described make sure it gets added to a map.</p>
-<p>When you draw a map don’t try to make it complete. Leave room for the unknown. As you play you’ll get more ideas and the players will give you inspiration to work with. Let the maps expand and change.</p>
-<h4>Address the characters, not the players</h4>
-<p class="NoIndent">Addressing the characters, not the players, means that you don’t say, “Tony, is Dunwick doing something about that wight?” Instead you say, “Dunwick, what are you doing about the wight?” Speaking this way keeps the game focused on the fiction and not on the table. It’s important to the flow of the game, too. If you talk to the players you may leave out details that are important to what moves the characters make. Since moves are always based on the actions of the character you need to think about what’s happening in terms of those characters—not the players portraying them.</p>
-<h4>Embrace the fantastic</h4>
-<p class="NoIndent">Magic, strange vistas, gods, demons, and abominations: the world is full of mystery and magic. Embrace that in your prep and in play. Think about “the fantastic” on various scales. Think about floating cities or islands crafted from the corpse of a god. Think about village wise-men and their spirit familiars or the statue that the local bandits touch to give them luck. The characters are interesting people, empowered by their gods, their skill at arms, or by mystical training. The world should be just as engaging.</p>
-<h4>Make a move that follows</h4>
+	<li>畫出地圖，但適度留白</li>
+	<li>對角色說話，而非對玩家</li>
+	<li>擁抱奇幻</li>
+	<li>進行合乎發展的動作</li>
+	<li>永遠不要說出你動作的名字</li>
+	<li>賦予每個怪物生命</li>
+	<li>為每個人物命名</li>
+	<li>詢問，並利用得到的答案</li>
+	<li>成為角色們的迷弟迷妹</li>
+	<li>構思危險</li>
+	<li>以敘事開始，以敘事做結</li>
+	<li>也要記得思考幕後</li></ul>
+<p class="NoIndent">
+	你的原則就是引導你行事的指南。通常，當是時候進行動作的時候，你心中早已經有了一些關於該做些什麼的想法。參考你的原則評估它，若它符合原則的話，就放手做下去吧。</p>
+
+<h4>畫出地圖，但適度留白</h4>
+<p class="NoIndent">
+	地城世界主要存在於玩家們的想像之中；而地圖能夠確保所有人都對此有著相同的共識。你不需要每次都由自己動手，但任何時候當有一個新的地點出現在故事中時，請確保它有被添加到地圖上。</p>
+<p>
+	當你繪製地圖時，不要嘗試把它填滿。保留一些空間給未知。隨著遊戲進行，你將會得到更多有趣的想法，而玩家們同時也會為你帶來絕佳的靈感。讓地圖隨之擴展，並產生變化。</p>
+
+<h4>對角色說話，而非對玩家</h4>
+<p class="NoIndent">
+	「對角色說話，而非對玩家」代表著你不會說「東尼，你的敦威克有打算對那個死靈做些什麼嗎？」，相反的，你會說「敦威克，你打算對那個死靈做些什麼？」。用這種方式說話，能讓遊戲專注在故事中，而不會讓玩家們抽離。這對遊戲的運行同樣至關重要。若你對著玩家說話，你們可能會因此忽略一些對於角色採取的動作而言相當重要的細節。由於動作的進行永遠是建基在角色所採取的行動上，因此你會需要好好思考這些角色身上發生了什麼事──而不是扮演他們的玩家們。</p>
+
+<h4>擁抱奇幻</h4>
+<p class="NoIndent">
+	魔法、奇異古怪的景色、諸神、惡魔、以及受憎之物：這個世界充滿著各種神祕和魔法。擁抱它們，將它們納入你的事前準備和遊戲中。試著考慮各種不同層級的「奇幻」事物。想想那使用舊神遺骸建造的浮空城市或島嶼；想想村莊中的智者和他們的靈魂魔寵、或者是那些當地匪徒傳說中那個能給觸碰者好運的雕像。玩家角色們都是些有趣的人物，他們或被神祇授予神力、或精通戰鬥的技術、或經歷過嚴苛的魔法訓練。而你的世界也該同樣的引人入勝。</p>
+
+<h4>進行合乎發展的動作</h4>
 <p class="NoIndent">When you make a move what you’re actually doing is taking an element of the fiction and bringing it to bear against the characters. Your move should always follow from the fiction. They help you focus on one aspect of the current situation and do something interesting with it. What’s going on? What move makes sense here?</p>
-<h4>Never speak the name of your move</h4>
+
+<h4>永遠不要說出你動作的名字</h4>
 <p class="NoIndent">There is no quicker way to ruin the consistency of Dungeon World than to tell the players what move you’re making. Your moves are prompts to you, not things you say directly.</p>
 <p>You never show the players that you’re picking a move from a list. You know the reason the slavers dragged off Omar was because you made the “put someone in a spot” move, but you show it to the players as a straightforward outcome of their actions, since it is.</p>
-<h4>Give every monster life</h4>
+
+<h4>賦予每個怪物生命</h4>
 <p class="NoIndent">Monsters are fantastic creatures with their own motivations (simple or complex). Give each monster details that bring it to life: smells, sights, sounds. Give each one enough to make it real, but don’t cry when it gets beat up or overthrown. That’s what player characters do!</p>
-<h4>Name every person</h4>
-<p class="NoIndent">Anyone that the players speak with has a name. They probably have a personality and some goals or opinions too, but you can figure that out as you go. Start with a name. The rest can flow from there.</p>
-<h4>Ask questions and use the answers</h4>
+
+<h4>為每個人物命名</h4>
+<p class="NoIndent">
+	每個與玩家們對話的人物都有著自己的名字。他們也可能會有著自己的人格特質、或甚至抱有不平凡的目標或觀點，但這些東西都可以留待你進行遊戲期間再決定。首先，從名字開始，剩下的將隨故事發展衍生而出。</p>
+
+<h4>詢問，並利用得到的答案</h4>
 <p class="NoIndent">Part of playing to find out what happens is explicitly not knowing everything, and being curious. If you don’t know something, or you don’t have an idea, ask the players and use what they say.</p>
 <p>The easiest question to use is “What do you do?” Whenever you make a move, end with “What do you do?” You don’t even have to ask the person you made the move against. Take that chance to shift the focus elsewhere: “Rath’s spell is torn apart with a flick of the mage’s wand. Finnegan, that spell was aiding you. What are you doing now that it’s gone?”</p>
-<h4>Be a fan of the characters</h4>
+
+<h4>成為角色們的迷弟迷妹</h4>
 <p class="NoIndent">Think of the players’ characters as protagonists in a story you might see on TV. Cheer for their victories and lament their defeats. You’re not here to push them in any particular direction, merely to participate in fiction that features them and their action.</p>
-<h4>Think dangerous</h4>
+
+<h4>構思危險</h4>
 <p class="NoIndent">Everything in the world is a target. You’re thinking like an evil overlord: no single life is worth anything and there is nothing sacrosanct. Everything can be put in danger, everything can be destroyed. Nothing you create is ever protected. Whenever your eye falls on something you’ve created, think how it can be put in danger, fall apart or crumble. The world changes. Without the characters’ intervention, it changes for the worse.</p>
-<h4>Begin and end with the fiction</h4>
+
+<h4>以敘事開始，以敘事做結</h4>
 <p class="NoIndent">Everything you and the players do in Dungeon World comes from and leads to fictional events. When the players make a move, they take a fictional action to trigger it, apply the rules, and get a fictional effect. When you make a move it always comes from the fiction.</p>
-<h4>Think offscreen too</h4>
+
+<h4>也要記得思考幕後</h4>
 <p class="NoIndent">Just because you’re a fan of the characters doesn’t mean everything happens right in front of them. Sometimes your best move is in the next room, or another part of the dungeon, or even back in town. Make your move elsewhere and show its effects when they come into the spotlight.</p>
 
 <hr/>
