--- a/monsters/undead/index.html
+++ b/monsters/undead/index.html
@@ -221,7 +221,7 @@
 <ul><li>Charm someone</li>
 <li>Feed on their blood</li>
 <li>Retreat to plan again</li></ul>
-<h3 class="MonsterName">Wight-Wolf	<span class="Tags">Horde, Organized, Intelligent</span></h3>
+<h3 class="MonsterName">死靈狼 (Wight-Wolf)	<span class="Tags">Horde, Organized, Intelligent</span></h3>
 <p class="MonsterStats">Pounce (d6+1 damage 1 piercing), 7 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Shadow form</p>
