--- a/gm/basics/index.html
+++ b/gm/basics/index.html
@@ -192,7 +192,7 @@
 
 <h4>畫出地圖，但適度留白</h4>
 <p class="NoIndent">
-	地城世界主要存在於玩家們的想像之中；而地圖能夠確保所有人都對此有著相同的共識。你不需要每次都由自己動手，但任何時候當有一個新的地點出現在故事中時，請確保它有被添加到地圖上。</p>
+	地城世界主要存在於玩家們的想像之中；而地圖能夠確保所有人都對此有著相同的共識。你不需要每次都由自己動手，但任何時候當有一個新的地點出現在故事中時，請確保它有確實被添加到地圖上。</p>
 <p>
 	當你繪製地圖時，不要嘗試把它填滿。保留一些空間給未知。隨著遊戲進行，你將會得到更多有趣的想法，而玩家們同時也會為你帶來絕佳的靈感。讓地圖隨之擴展，並產生變化。</p>
 
@@ -202,60 +202,77 @@
 
 <h4>擁抱奇幻</h4>
 <p class="NoIndent">
-	魔法、奇異古怪的景色、諸神、惡魔、以及受憎之物：這個世界充滿著各種神祕和魔法。擁抱它們，將它們納入你的事前準備和遊戲中。試著考慮各種不同層級的「奇幻」事物。想想那使用舊神遺骸建造的浮空城市或島嶼；想想村莊中的智者和他們的靈魂魔寵、或者是那些當地匪徒傳說中那個能給觸碰者好運的雕像。玩家角色們都是些有趣的人物，他們或被神祇授予神力、或精通戰鬥的技術、或經歷過嚴苛的魔法訓練。而你的世界也該同樣的引人入勝。</p>
+	魔法、奇異古怪的景色、諸神、惡魔、以及受憎之物：這個世界充滿著各種神祕和魔法。擁抱它們，將它們納入你的事前準備和遊戲中。試著考慮各種不同層級的「奇幻」事物。想想那使用舊神遺骸建造的浮空城市或島嶼；想想村莊中的智者和他們的靈魂魔寵、或者是當地匪徒傳說中那個能給觸碰者好運的雕像。玩家角色們都是些有趣的人物，他們或被神祇授予神力、或精通戰鬥的技術、或經歷過嚴苛的魔法訓練。而你的世界也該同樣的引人入勝。</p>
 
 <h4>進行合乎發展的動作</h4>
-<p class="NoIndent">When you make a move what you’re actually doing is taking an element of the fiction and bringing it to bear against the characters. Your move should always follow from the fiction. They help you focus on one aspect of the current situation and do something interesting with it. What’s going on? What move makes sense here?</p>
+<p class="NoIndent">
+	當你進行動作時，你實際上在做的就是把一個敘事中的要素拿來對付角色們。你的動作永遠必須從敘事而來。這能夠協助你專注在當下情境中的某個面向，並利用它營造出一些有趣的發展。現在發生了什麼事？在這裡又該出現什麼動作才合理？</p>
 
 <h4>永遠不要說出你動作的名字</h4>
-<p class="NoIndent">There is no quicker way to ruin the consistency of Dungeon World than to tell the players what move you’re making. Your moves are prompts to you, not things you say directly.</p>
-<p>You never show the players that you’re picking a move from a list. You know the reason the slavers dragged off Omar was because you made the “put someone in a spot” move, but you show it to the players as a straightforward outcome of their actions, since it is.</p>
+<p class="NoIndent">
+	再也沒有什麼比告訴玩家你正在做什麼動作更能破壞地城世界的連貫性了。你的動作是給你的提示，而不是讓你直接拿來宣告的東西。</p>
+<p>
+	永遠不要告訴玩家你從動作清單中挑選了哪個動作。儘管你知道歐瑪爾之所被那群奴隸拖走是因為你進行了「讓某人陷入窘境」這個動作，但你不會這樣告訴玩家，而是直接將這個情境展示給他們，並將其當作他們所作所為帶來的直接後果──因為這就是如此。</p>
 
 <h4>賦予每個怪物生命</h4>
-<p class="NoIndent">Monsters are fantastic creatures with their own motivations (simple or complex). Give each monster details that bring it to life: smells, sights, sounds. Give each one enough to make it real, but don’t cry when it gets beat up or overthrown. That’s what player characters do!</p>
+<p class="NoIndent">
+	怪物是那些有著自己行事動機（無論單純或複雜）的奇幻生物。為每一個怪物添加細節，使牠栩栩如生：氣味、外貌、聲音，讓牠們的形象飽滿到彷彿真實存在一般，但不要在牠們被擊敗或打倒時哭泣。那是你該為玩家角色做的事！</p>
 
 <h4>為每個人物命名</h4>
 <p class="NoIndent">
 	每個與玩家們對話的人物都有著自己的名字。他們也可能會有著自己的人格特質、或甚至抱有不平凡的目標或觀點，但這些東西都可以留待你進行遊戲期間再決定。首先，從名字開始，剩下的將隨故事發展衍生而出。</p>
 
 <h4>詢問，並利用得到的答案</h4>
-<p class="NoIndent">Part of playing to find out what happens is explicitly not knowing everything, and being curious. If you don’t know something, or you don’t have an idea, ask the players and use what they say.</p>
-<p>The easiest question to use is “What do you do?” Whenever you make a move, end with “What do you do?” You don’t even have to ask the person you made the move against. Take that chance to shift the focus elsewhere: “Rath’s spell is torn apart with a flick of the mage’s wand. Finnegan, that spell was aiding you. What are you doing now that it’s gone?”</p>
+<p class="NoIndent">
+	要做到「用玩的來看看會發生什麼事」有個想當然的訣竅，就是不要讓自己知道所有一切，並時時保持好奇心。若你對某個東西一無所知、或者你想不到什麼好主意的話，就向玩家們發問，並利用他們的回答吧。</p>
+<p>
+	最容易使用的問題是「你打算做什麼？」。每當你進行一個動作後，用「你打算做什麼？」來做結。你甚至不一定要向那個動作的對象發問，抓住機會把焦點轉移到他人身上：「隨著魔導師的魔杖輕點，拉瑟的法術瞬間被撕毀消散。芬尼根，那個法術本該要幫助你的，你現在打算做什麼？」</p>
 
 <h4>成為角色們的迷弟迷妹</h4>
-<p class="NoIndent">Think of the players’ characters as protagonists in a story you might see on TV. Cheer for their victories and lament their defeats. You’re not here to push them in any particular direction, merely to participate in fiction that features them and their action.</p>
+<p class="NoIndent">
+	把玩家的角色們當作是你在電視上看到的故事中的主角。為他們的勝利歡呼、為他們的失敗哀傷。你來這裡並不是為了要把他們推往任何特定的方向發展，而僅僅只是參與到特寫著他們和他們所作所為的故事當中。</p>
 
 <h4>構思危險</h4>
-<p class="NoIndent">Everything in the world is a target. You’re thinking like an evil overlord: no single life is worth anything and there is nothing sacrosanct. Everything can be put in danger, everything can be destroyed. Nothing you create is ever protected. Whenever your eye falls on something you’ve created, think how it can be put in danger, fall apart or crumble. The world changes. Without the characters’ intervention, it changes for the worse.</p>
+<p class="NoIndent">
+	這個世界上的所有一切都可以是你的目標。你要像個邪惡的統治者一樣思考：沒有任何事物的生命是有價值的，也沒有任何事物是神聖不可侵犯的。所有一切都可能陷入危險，所有一切都可以被摧毀。你所創造的一切都不受到任何保護，所以，每當你的目光停在某個你創造的東西上，想想該如何讓它陷入危險、讓它分崩離析、灰飛湮滅。倘若角色們沒有介入的話，情況將會變得越來越糟。</p>
 
 <h4>以敘事開始，以敘事做結</h4>
-<p class="NoIndent">Everything you and the players do in Dungeon World comes from and leads to fictional events. When the players make a move, they take a fictional action to trigger it, apply the rules, and get a fictional effect. When you make a move it always comes from the fiction.</p>
+<p class="NoIndent">
+	你和玩家們在地城世界中所做的一切都源自，並會導致故事中的事件。當玩家們進行了某個動作，意味著他們在故事中也採取了某個行動，並因此觸發動作，應用規則，然後得到另一個故事中的效果。同樣的，當你進行某個動作時，它也永遠必須從敘事而來。</p>
 
 <h4>也要記得思考幕後</h4>
-<p class="NoIndent">Just because you’re a fan of the characters doesn’t mean everything happens right in front of them. Sometimes your best move is in the next room, or another part of the dungeon, or even back in town. Make your move elsewhere and show its effects when they come into the spotlight.</p>
+<p class="NoIndent">
+	就因為你是角色們的迷弟迷妹，並不意味著所有事情都必須在他們面前發生。有時候，你所能進行最好的動作可能會發生在隔壁的房間、或地城中的另一個區塊、或甚至在他們將要返回的城鎮之中。在別處進行你的動作，並在它們出現在聚光燈下時展現出它帶來的影響。</p>
 
 <hr/>
 <h2>動作 (Moves)</h2>
-<p class="NoIndent">Whenever everyone looks to you to see what happens choose one of these. Each move is something that occurs in the fiction of the game—they aren’t code words or special terms. “Use up their resources” literally means to expend the resources of the characters, for example.</p>
-<ul><li>Use a monster, danger, or location move</li>
-<li>Reveal an unwelcome truth</li>
-<li>Show signs of an approaching threat</li>
-<li>Deal damage</li>
-<li>Use up their resources</li>
-<li>Turn their move back on them</li>
-<li>Separate them</li>
-<li>Give an opportunity that fits a class’ abilities</li>
-<li>Show a downside to their class, race, or equipment</li>
-<li>Offer an opportunity, with or without cost</li>
-<li>Put someone in a spot</li>
-<li>Tell them the requirements or consequences and ask</li></ul>
-<p class="NoIndent">Never speak the name of your move (that’s one of your principles). Make it a real thing that happens to them: “As you dodge the hulking ogre’s club, you slip and land hard. Your sword goes sliding away into the darkness. You think you saw where it went but the ogre is lumbering your way. What do you do?”</p>
-<p>No matter what move you make, always follow up with “What do you do?” Your moves are a way of fulfilling your agenda—part of which is to fill the characters’ lives with adventure. When a spell goes wild or the floor drops out from under them adventurers react or suffer the consequences of inaction.</p>
-<h3>When to Make a Move</h3>
-<p class="NoIndent">You make a move:</p>
-<ul><li>When everyone looks to you to find out what happens</li>
-<li>When the players give you a golden opportunity</li>
-<li>When they roll a 6-</li></ul>
+<p class="NoIndent">
+	當所有人都看向你，想知道接下來發生了什麼事情的時候，從這些動作中選擇一項。這裡列出的每個動作都是在遊戲中發生的某個故事情節──它們並不是什麼暗語或特殊術語。舉例來說，「消耗他們的資源」就如同其字面意義所示，代表著消耗角色們身上的資源。</p>
+<ul>
+	<li>使用一個怪物、危險、或地點動作 (Use a monster, danger, or location move)</li>
+	<li>揭露一個討厭的真相 (Reveal an unwelcome truth)</li>
+	<li>顯現出一個迫近威脅的跡象 (Show signs of an approaching threat)</li>
+	<li>造成傷害 (Deal damage)</li>
+	<li>消耗他們的資源 (Use up their resources)</li>
+	<li>把他們的動作反過來對付他們 (Turn their move back on them)</li>
+	<li>拆散他們 (Separate them)</li>
+	<li>給他們一個展現職業能力的機會 (Give an opportunity that fits a class’ abilities)</li>
+	<li>表現出他們職業、種族、或裝備的缺點 (Show a downside to their class, race, or equipment)</li>
+	<li>提供一個機會，可能伴隨著代價 (Offer an opportunity, with or without cost)</li>
+	<li>讓某人陷入窘境 (Put someone in a spot)</li>
+	<li>告訴他們某件事的條件或後果，並詢問 (Tell them the requirements or consequences and ask)</li></ul>
+<p class="NoIndent">
+	永遠不要說出你動作的名稱（這也是你的其中一個原則）。讓它成為真實發生的事情：「就在你閃躲龐大食人魔重重揮下的棍棒的同時，你腳步不慎一滑，狼狽落地。你的寶劍順勢滑落，消失在了黑暗中。你覺得你似乎看見了它掉落在什麼地方，但那頭食人魔正踏著笨重的腳步，緩緩向你逼近。你打算做什麼？」</p>
+<p>
+	無論你做了什麼動作，永遠記得在最後接上一句「你打算做什麼？」。你的動作是你用來達成你目標事項的其中一個手段──讓角色們的生命充滿冒險。當法術失控暴走、或當他們腳下的地面坍方失墜時，冒險者們必須做出反應，否則就將承受不作為所帶來的慘痛後果。</p>
+
+<h3>什麼時候該進行動作</h3>
+<p class="NoIndent">你進行動作的時機如下：</p>
+<ul>
+	<li>當所有人都看向你，想知道發生了什麼事時</li>
+	<li>當玩家們為你提供了一個絕佳機會時</li>
+	<li>當他們擲出了 6- 的結果時</li></ul>
+
 <p class="NoIndent">Generally when the players are just looking at you to find out what happens you make a soft move, otherwise you make a hard move.</p>
 <p>A soft move is one without immediate, irrevocable consequences. That usually means it’s something not all that bad, like revealing that there’s more treasure if they can just find a way past the golem (offer an opportunity with cost). It can also mean that it’s something bad, but they have time to avoid it, like having the goblin archers loose their arrows (show signs of an approaching threat) with a chance for them to dodge out of danger.</p>
 <p>A soft move ignored becomes a golden opportunity for a hard move. If the players do nothing about the hail of arrows flying towards them it’s a golden opportunity to use the deal damage move.</p>
